# Sales-Forecasting-AI

./: .dockerignore  Dockerfile  airflow_settings.yaml  docker-compose.override.yml  main.py  pyproject.toml  requirements-airflow.txt  requirements.txt
config/: airflow.cfg
dags/: sales_forecast_training.py
