[project]
name = "sales-forecasting-ai"
version = "0.1.0"
description = "A production-ready MLOps platform for sales forecasting that demonstrates modern machine learning engineering practices. Built on Astronomer (Apache Airflow), this project implements an end-to-end ML pipeline with ensemble modeling, comprehensive visualization, and real-time inference capabilities via Streamlit."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow>=3.2.1",
    "boto3>=1.42.96",
    "category-encoders>=2.9.0",
    "fastapi>=0.136.1",
    "holidays>=0.95",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pandera>=0.31.1",
    "plotly>=6.7.0",
    "prophet>=1.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pymongo>=4.17.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "s3fs>=0.4.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "sqlalchemy>=2.0.49",
    "statsmodels>=0.14.6",
    "streamlit>=1.56.0",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
]
